# arxiv_agent

./: .gitignore  main.py  pyproject.toml
data/: eval_cases.json
docs/superpowers/plans/: 2026-05-10-arxiv-agent-observability.md
docs/superpowers/specs/: 2026-05-10-arxiv-agent-observability-design.md
notebooks/: 01_agent.ipynb  02_eval.ipynb
src/arxiv_agent/: agent.py  eval.py  observability.py  tools.py
src/arxiv_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_eval.py  test_tools.py
