[project]
name = "arxiv-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain-openai>=1.2.1",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "markdownify>=1.2.2",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
